# capy

./: .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_PLAN.md  RELEASE_STATUS.md  SECURITY.md  USAGE.md  capy.go  capy_test.go  commands.yaml  context_blocks_test.go  functype_test.go  go.mod  metaprogramming_test.go  missing_features_test.go  mkdocs.yml  multitoken_closer_test.go  requirements-docs.txt
.github/: CODEOWNERS  pull_request_template.md
.ignore/: text
agents/: capy-system-prompt.md
docs/: CAPY_FOR_LLMS.md  ai-agents.md  architecture.md  backend-codegen.md  block-functions.md  capy-libraries.md  cli.md  compiling-libraries.md  cookbook-ai.md  cookbook-compile.md  cookbook.md  design-systems.md  embedding.md  errors-and-debugging.md  extending-existing-syntax.md  faq.md  features.md  for-everyone.md  function-cookbook.md  getting-started.md  grammar-as-contract.md  host-capabilities.md  how-capy-parses.md  idea-language.md  index.md  inner-dsl.md  integration-guide.md  language-reference.md  library-authoring.md  library-commands.md  library-documentation.md  library-keywords.md  mcp-widgets.md  mcp.md  metaprogramming.md  migration-guide.md  multi-file-and-imports.md  one-source-many-files.md  playground.md  progressive-abstraction.md  (+7 more)
domain/: ast.go  command.go  docs.go  errors.go  errors_test.go  host.go  impl.go  (+3 more)
samples/libtorch-train/expected/: CMakeLists.txt  README.md  run.sh
samples/libtorch-train/expected/src/: main.cpp  model.h
(+712 files in other folders)
